<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Digitales Hausaufgabenheft</string>
    <!--<string name="app_name">HAStundenplanApp</string>-->

    <string-array name="grade">
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
    </string-array>

    <string-array name="classSpecification">
        <item> </item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
    </string-array>

    <string-array name="scheduleView">
        <item>Tagesansicht</item>
        <item>Wochenansicht</item>
        <item>Monatsansicht</item>
    </string-array>

    <string-array name="shareOptions">
        <item>Teile Alles</item>
        <item>Teile nur mit Freunden</item>
        <item>Teile nur auf Nachfrage</item>
        <item>Teile garnicht</item>
    </string-array>

    <string name="Montag">Montag</string>
    <string name="Dienstag">Dienstag</string>
    <string name="Mittwoch">Mittwoch</string>
    <string name="Donnerstag">Donnerstag</string>
    <string name="Freitag">Freitag</string>
    <string name="Samstag">Samstag</string>
    <string name="Sonntag">Sonntag</string>

    <string name="Fach">Fach</string>
    <string name="Lehrer">Lehrer</string>
    <string name="Raum">Raum</string>
    <string name="Woche">wöchentlich</string>
    <string name="Speichern">Speichern</string>
    <string name="first">Start</string>
    <string name="hello_world">Hello World!</string>
    <string name="last">Ende</string>
    <string name="Weekday">Wochentag</string>
    <string name="Hausaufgabe">Hausaufgabe</string>
    <string name="DigitalScheduleDate">Das Datum:</string>
    <string name="today">Heute</string>
    <string name="previous">&lt; -Woche</string>
    <string name="next">Woche -></string>
    <string name="uploadTask">Fotografiere Aufgabe</string>
    <string name="uploadSolution">Fotografiere Lösung</string>
    <string name="Status">Status</string>
    <string name="HADate">0.Stunde am Montag den 23.07.2016</string>
    <string name="positive">+</string>
    <string name="negative">-</string>
    <string name="voting">7</string>
    <string name="openChat">Chat öffnen</string>

    <color name="white">#ffffffff</color>
    <color name="black">#ff000000</color>
    <color name="buttonTextColor">#ff000000</color>
    <color name="buttonBackgroundColor">#ffffffff</color>
</resources>
